--- a/src/styles.css
+++ b/src/styles.css
@@ -31,10 +31,12 @@ body {
 .add {
   width: 65px;
   margin-left: 10px;
+  padding: 2px;
 }
 .delete {
   width: 50px;
   margin-left: 10px;
+  border-radius: 10px;
 }
 
 .delete:hover,
